--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,9 +39,9 @@ jobs:
           name: Deploy to Google Cloud Platform
           command: |
             if [ "$CIRCLE_BRANCH" == 'master' ]; then
-              ssh -o "StrictHostKeyChecking no" $USER@$IPADDRESS 'cd /home/andelatsm/erp && sudo docker system prune -f --volumes && sudo docker network prune -f && git pull https://github.com/deye9/erp.git && composer install && sudo docker-compose down && sudo docker-compose build --no-cache && sudo docker-compose up - d'
+              ssh -o "StrictHostKeyChecking no" $USER@$IPADDRESS 'cd /home/andelatsm/erp && sudo docker system prune -f --volumes && sudo docker network prune -f && git pull https://github.com/deye9/erp.git && composer install && sudo docker-compose down && sudo docker-compose build --no-cache && sudo docker-compose up -d'
             fi
-
+      # sudo /etc/init.d/apache2 stop
       # - run:
       #     name: Migrate Laravel Database
       #     command: php artisan migrate:fresh --seed --env=testing
