--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,9 @@ jobs:
           name: Install project dependencies
           command: php composer.phar require --dev phpunit/php-invoker
       - run:
+          name: Run CodeSniffer
+          command: php vendor/bin/phpcs --extensions=php --standard=ruleset.xml ./application/ ./tests
+      - run:
           name: Run Tests
           command: vendor/bin/phpunit
       - add_ssh_keys:
