--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,10 +31,10 @@ jobs:
           command: php composer.phar require --dev phpunit/php-invoker
       - run:
           name: Run CodeSniffer
-          command: php vendor/bin/phpcs --extensions=php --standard=ruleset.xml ./application/ ./tests
+          command: php vendor/bin/phpcs --extensions=php --standard=ruleset.xml ./application/
       - run:
           name: Run Tests
-          command: vendor/bin/phpunit
+          command: php vendor/bin/phpunit
       - add_ssh_keys:
           fingerprints:
             - "41:df:a1:e9:40:ac:f4:9b:47:0a:ee:a1:98:01:7c:38"
