--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
           command: php composer.phar require --dev phpunit/php-invoker
       - run:
           name: Run CodeSniffer
-          command: php vendor/bin/phpcs --extensions=php --standard=ruleset.xml .
+          command: php vendor/bin/phpcs --extensions=php --standard=ruleset.xml --ignore=*/vendor,*/tests,*/database .
       - run:
           name: Run Tests
           command: php vendor/bin/phpunit
